--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@ section_id: contact
               </div>
               <div class='medium-12 columns'>
                 <input class='required' name='name' placeholder='NAME' type='text'>
-                <input class='required email' name='email' placeholder='EMAIL' type='text'>
+                <input class='required email' name='_replyto' placeholder='EMAIL' type='email'>
                 <input class='required' name='subject' placeholder='SUBJECT' type='text'>
                 <textarea class='required' name='message' placeholder='MESSAGE'></textarea>
                 <input class='button white' type='submit' value="Send">
