--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,12 @@ section_id: contact
   <div class='four spacing'></div>
 </div>
 
+<form action="//formspree.io/contact@beamsociety.ca" method="POST">
+  <input type="text" name="name">
+  <input type="email" name="_replyto">
+  <input type="submit" value="Send">
+</form>
+
   <div class='full'>
     <div class='row'>
       <div class='medium-8 columns'>
