--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,6 @@ section_id: contact
   <div class='four spacing'></div>
 </div>
 
-<form action="//formspree.io/contact@beamsociety.ca" method="POST">
-  <input type="text" name="name">
-  <input type="email" name="_replyto">
-  <input type="submit" value="Send">
-</form>
-
   <div class='full'>
     <div class='row'>
       <div class='medium-8 columns'>
@@ -26,23 +20,24 @@ section_id: contact
           <div class='row'>
 
             <form id='contact_form' method='POST' action="//formspree.io/contact@beamsociety.ca">
-              <div class='large-12 columns'>
+<!--               <div class='large-12 columns'>
                 <p id='thanks' style='display: none;'>
                   Thanks for contacting us, we'll be in touch soon!
                 </p>
-              </div>
+              </div> -->
               <div class='medium-12 columns'>
-    <input type="email" name="_replyto" placeholder="Your email" />
-    <textarea name="message" rows="5" placeholder="Your message"></textarea>
-    <input type="text" name="_gotcha" style="display:none">
-    <button type="submit">Send</button>
-<!--                 <input class='required' name='name' placeholder='NAME' type='text'>
+                <input class='required' name='name' placeholder='NAME' type='text'>
                 <input class='required email' name='_replyto' placeholder='EMAIL' type='email'>
                 <input class='required' name='_subject' placeholder='SUBJECT' type='hidden' value="Website Contact"/>
                 <textarea class='required' name='message' placeholder='MESSAGE'></textarea>
-                <input class='button white' type='submit' value="Send"> -->
+                <input type="text" name="_gotcha" style="display:none" />
+                <input class='button white' type='submit' value="Send">
               </div>
             </form>
+            <script>
+    var contactform =  document.getElementById('contactform');
+    contactform.setAttribute('action', '//formspree.io/' + 'your' + '@' + 'email' + '.' + 'com');
+</script>
 
           </div>
         </div>
