--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@ section_id: contact
         <div class='form'>
           <div class='row'>
 
-            <form id='contact_form' method='POST' action="//formspree.io/contact@beamsociety.ca">
+            <form id='contact_form' method='POST' action="https://formkeep.com/f/26b5dd32ee77" accept-charset="UTF-8">
 <!--               <div class='large-12 columns'>
                 <p id='thanks' style='display: none;'>
                   Thanks for contacting us, we'll be in touch soon!
@@ -34,11 +34,6 @@ section_id: contact
                 <input class='button white' type='submit' value="Send">
               </div>
             </form>
-            <script>
-    var contactform =  document.getElementById('contactform');
-    contactform.setAttribute('action', '//formspree.io/' + 'your' + '@' + 'email' + '.' + 'com');
-</script>
-
           </div>
         </div>
         <div class='two spacing'></div>
