--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@ section_id: contact
         <div class='form'>
           <div class='row'>
 
-            <form id='contact_form' method='POST' action="https://formkeep.com/f/26b5dd32ee77" accept-charset="UTF-8">
+            <form id='contact_form' method='POST' action=" https://fwdform.herokuapp.com/user/52b6fb40-529a-49d9-a908-232830c47635" accept-charset="UTF-8">
 <!--               <div class='large-12 columns'>
                 <p id='thanks' style='display: none;'>
                   Thanks for contacting us, we'll be in touch soon!
@@ -53,7 +53,7 @@ section_id: contact
 
 <script type="text/javascript">
 $(function() {
-  $('#newsletter-signup').submit(function(event) {
+  $('#contact_form').submit(function(event) {
     event.preventDefault();
 
     var formEl = $(this);
