formspree one more time

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@ section_id: contact
         <div class='form'>
           <div class='row'>
 
-            <form id='contact_form' method='POST' action="https://formkeep.com/f/26b5dd32ee77">
+            <form id='contact_form' method='POST' action="//formspree.io/contact@beamsociety.ca">
               <div class='large-12 columns'>
                 <p id='thanks' style='display: none;'>
                   Thanks for contacting us, we'll be in touch soon!
@@ -28,7 +28,7 @@ section_id: contact
               <div class='medium-12 columns'>
                 <input class='required' name='name' placeholder='NAME' type='text'>
                 <input class='required email' name='email' placeholder='EMAIL' type='email'>
-                <input class='required' name='subject' placeholder='SUBJECT'/>
+                <input class='required' name='subject' placeholder='SUBJECT'>
                 <textarea class='required' name='message' placeholder='MESSAGE'></textarea>
                 <input class='button white' type='submit' value="Send">
               </div>
