should be working

--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,10 @@ section_id: contact
               </div>
               <div class='medium-12 columns'>
                 <input class='required' name='name' placeholder='NAME' type='text'>
-                <input class='required email' name='email' placeholder='EMAIL' type='email'>
-                <input class='required' name='subject' placeholder='SUBJECT'>
+                <input class='required email' name='_replyto' placeholder='EMAIL' type='email'>
+                <input class='required' name='_subject' placeholder='SUBJECT' type='text'>
                 <textarea class='required' name='message' placeholder='MESSAGE'></textarea>
-                <input class='button white' type='submit' value="Send">
+                <input class='button white' type='submit'>
               </div>
             </form>
           </div>
