update about and new members, changed logo

--- a/about.html
+++ b/about.html
@@ -58,6 +58,7 @@ skills:
   <div class='row'>
 
     {% for member in site.data.members%}
+	<div class='{{member.row}}'></div>
       <div class='small-12 medium-3 large-3 columns'>
         <div class='mod modTeamMember'>
           <div class='member'>
