fixed footer link issue, updated contact email, new post

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@ section_id: contact
         <div class='form'>
           <div class='row'>
 
-            <form id='contact_form' method='POST' action="//formspree.io/contact@beamsociety.ca">
+            <form id='contact_form' method='POST' action="https://formspree.io/macbeams@mcmaster.ca">
               <div class='large-12 columns'>
                 <p id='thanks' style='display: none;'>
                   Thanks for contacting us, we'll be in touch soon!
@@ -42,7 +42,7 @@ section_id: contact
           <h4>Our location:</h4>
           <p>McMaster University</p>
           <h4>Our Email:</h4>
-          <p>contact@beamsociety.ca</p>
+          <p>macbeams@mcmaster.ca</p>
         </div>
       </div>
     </div>
